<resources>
    <string name="app_name">Scavenger</string>
    <string name="user_name">User Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="scavenger">Scavenger</string>
    <string name="login_to_user_account">Login to User Account</string>
    <string name="submit">Submit</string>
    <string name="create_new_account">Create New Account</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="start_here">Start Here</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="scavenger_logo">Scavenger Logo</string>
    <string name="savedmealsbutton">savedmealsbutton</string>
    <string name="search_button">search button</string>
    <string name="what_can_you_make">What can You Make?</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="profile">Profile</string>
    <string name="enter_here">Enter Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="tiny_hyena">tiny Hyena</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login_here">Login Here</string>
    <string name="logout">Logout</string>
    <string name="let_s_scavenge">Let\'s Scavenge!</string>
    <string name="milk">Milk</string>
    <string name="choose_all_of_the_ingredients_you_have">Choose All of the Ingredients you have</string>
    <string name="butter">Butter</string>
    <string name="white_bread">White Bread</string>
    <string name="cheddar_cheese">Cheddar Cheese</string>
    <string name="mozzerela">Mozzerela</string>
    <string name="bacon">Bacon</string>
    <string name="tomato">Tomato</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="bellpepper">BellPepper</string>
    <string name="strawberries">Strawberries</string>
    <string name="search">Search</string>
    <string name="entered_ingredients">Entered Ingredients:</string>
    <string name="enter_ingredients_below">Enter Ingredients Below</string>
    <string name="more_info">More Info</string>
    <string name="name">name</string>
    <string name="todo">TODO</string>
</resources>