<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="130dp"
            android:layout_height="52dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/account"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/account" />

        <ImageButton
            android:id="@+id/favoritesBtn"
            android:layout_width="138dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/savedmealsbutton"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/saved" />

        <ImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="125dp"
            android:layout_height="53dp"
            android:layout_marginBottom="56dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/scavengerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="serif"
        android:text="@string/scavenger"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scavengerLogoView"
        android:layout_width="171dp"
        android:layout_height="190dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/scavenger_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/scavengerlogo" />

    <ImageButton
        android:id="@+id/searchBtn"
        android:layout_width="83dp"
        android:layout_height="79dp"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="60dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/search_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/scavengerLogoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/searchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="serif"
        android:text="@string/let_s_scavenge"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>