<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="@color/light_grey"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="130dp"
            android:layout_height="52dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/account"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/account" />

        <ImageButton
            android:id="@+id/favoritesBtn"
            android:layout_width="138dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/savedmealsbutton"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/saved" />

        <ImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="125dp"
            android:layout_height="53dp"
            android:layout_marginBottom="56dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/displayLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Go Back" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>